docs/api/qiskit/0.19/qiskit.providers.ibmq.job.QueueInfo.mdx
---
title: QueueInfo
description: API reference for qiskit.providers.ibmq.job.QueueInfo
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.ibmq.job.QueueInfo
---

# QueueInfo

<Class id="qiskit.providers.ibmq.job.QueueInfo" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-ibmq-provider/tree/stable/0.7/qiskit/providers/ibmq/job/queueinfo.py" signature="QueueInfo(position=None, status=None, estimated_start_time=None, estimated_complete_time=None, hub_priority=None, group_priority=None, project_priority=None, job_id=None, **kwargs)">
  Queue information for a job.

  ### position

  <Attribute id="qiskit.providers.ibmq.job.QueueInfo.position" name="position">
    Job position in the queue within the scope of the provider.
  </Attribute>

  ### estimated\_start\_time

  <Attribute id="qiskit.providers.ibmq.job.QueueInfo.estimated_start_time" name="estimated_start_time">
    Estimated start time for the job, in UTC.
  </Attribute>

  ### estimated\_complete\_time

  <Attribute id="qiskit.providers.ibmq.job.QueueInfo.estimated_complete_time" name="estimated_complete_time">
    Estimated completion time for the job, in UTC.
  </Attribute>

  ### hub\_priority

  <Attribute id="qiskit.providers.ibmq.job.QueueInfo.hub_priority" name="hub_priority">
    Dynamic priority for the hub the job is in.
  </Attribute>

  ### group\_priority

  <Attribute id="qiskit.providers.ibmq.job.QueueInfo.group_priority" name="group_priority">
    Dynamic priority for the group the job is in.
  </Attribute>

  ### project\_priority

  <Attribute id="qiskit.providers.ibmq.job.QueueInfo.project_priority" name="project_priority">
    Dynamic priority for the project the job is in.
  </Attribute>

  ### job\_id

  <Attribute id="qiskit.providers.ibmq.job.QueueInfo.job_id" name="job_id">
    Job ID.
  </Attribute>

  QueueInfo constructor.

  **Parameters**

  *   **position** (`Optional`\[`int`]) – Position in the queue.
  *   **status** (`Optional`\[`str`]) – Job status.
  *   **estimated\_start\_time** (`Union`\[`str`, `datetime`, `None`]) – Estimated start time for the job, in UTC.
  *   **estimated\_complete\_time** (`Union`\[`str`, `datetime`, `None`]) – Estimated complete time for the job, in UTC.
  *   **hub\_priority** (`Optional`\[`float`]) – Dynamic priority for the hub.
  *   **group\_priority** (`Optional`\[`float`]) – Dynamic priority for the group.
  *   **project\_priority** (`Optional`\[`float`]) – Dynamic priority for the project.
  *   **job\_id** (`Optional`\[`str`]) – Job ID.
  *   **kwargs** (`Any`) – Additional attributes.

  ## Methods

  ### format

  <Function id="qiskit.providers.ibmq.job.QueueInfo.format" name="format" signature="QueueInfo.format()">
    Build a user-friendly report for the job queue information.

    **Return type**

    `str`

    **Returns**

    The job queue information report.
  </Function>
</Class>

